--- a/src/Routes/Home/home.styles.scss
+++ b/src/Routes/Home/home.styles.scss
@@ -4,20 +4,24 @@
     margin: 0;
 }
 
-.homepage-video-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
+.homepage-container {
     height: 100vh;
-    padding-top: 8rem;
-    padding-bottom: 5rem;
-    text-align: center;
-    color: white;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    
+}
+
+.page {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+}
+
+.homepage-video-container {
+    height: 100vh;
 }
 
 #video {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   position: absolute;
@@ -52,3 +56,51 @@
     }
 }
 
+.homepage-model3-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_2560,w_4096,c_fit,f_auto,q_auto:best/Homepage-Model-3-Desktop-LHD');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-modelY-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_2400,w_2880,c_fit,f_auto,q_auto:best/Homepage-Model-Y-Global-Desktop');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-modelS-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto:best/Model-S-homepage-desktop');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-modelX-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_1800,w_2880,c_fit,f_auto,q_auto:best/Homepage-Model-X-Desktop-LHD');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-solar-panel-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_1800,w_2880,c_fit,f_auto,q_auto:best/425_HP_SolarPanels_D');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-solar-roof-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_1800,w_2880,c_fit,f_auto,q_auto:best/Homepage-SolarRoof-Desktop-Global');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.homepage-accessories-container {
+    background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto:best/Desktop_Accessories');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
