--- a/src/Routes/Home/home.styles.scss
+++ b/src/Routes/Home/home.styles.scss
@@ -38,7 +38,7 @@
     }
 
     p {
-        font-size: 12px;
+        font-size: 1rem;
     }
 }
 
@@ -104,3 +104,6 @@
     background-position: center;
     height: 100vh;
 }
+
+
+
