--- a/src/Components/Text/text.styles.scss
+++ b/src/Components/Text/text.styles.scss
@@ -22,6 +22,17 @@
     transform: translate(-50%, 0%);
 }
 
+.description-model {
+    text-decoration: underline;
+    text-decoration-thickness: 0px;
+    transition: text-decoration-thickness 0.3s ease-in-out;
+}
+
+.description-model:hover {
+    text-decoration-thickness: 1px;
+    cursor: pointer;
+}
+
 .text-buttons-container{
     position: fixed;
     top: 88%;
@@ -99,6 +110,10 @@
         background-color: rgba(23, 26, 32, 1);
         color: white;
         font-family: 'Museo';
+        padding: 0.6rem 0;
+        width: 16rem;
+        border-radius: 5px;
+        border: none;
         
         
     }
