--- a/src/Components/Text/text.styles.scss
+++ b/src/Components/Text/text.styles.scss
@@ -20,6 +20,7 @@
     top: 0%;
     left: 50%;
     transform: translate(-50%, 0%);
+    z-index: 0;
 }
 
 .description-model {
@@ -48,7 +49,7 @@
     }
 
     p {
-        font-size: 12px;
+        font-size: 14px;
         margin-top: 0.3rem;
         text-underline-offset: 4px;
     }
@@ -61,7 +62,7 @@
 
 .text-button {
     padding-bottom: 5rem;
-    font-size: 12px;
+    font-size: 14px;
 
     button {
         background: none;
@@ -77,7 +78,7 @@
 
 .text-double-buttons {
     padding-bottom: 5rem;
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,7 +105,7 @@
 
 .accessories-button {
     padding-bottom: 5rem;
-    font-size: 12px;
+    font-size: 14px;
 
     button {
         background-color: rgba(23, 26, 32, 1);
@@ -116,5 +117,39 @@
         border: none;
         
         
+    }
+}
+
+@media screen and (max-width: 625px) {
+    .text-title {
+        padding-top: 12rem;
+        width: 90%;
+    }
+
+    .text-buttons-container{
+        position: fixed;
+        top: 90%;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        width: 100vw;
+        padding: 0 2rem;
+    }
+
+    .text-button, .accessories-button {
+        padding-bottom: 0rem;
+        padding-top: 3rem;
+        
+        button {
+            width: 100%;
+        }
+    }
+    
+
+    .text-double-buttons {
+        flex-direction: column;
+
+        button {
+            width: 100%;
+        }
     }
 }
