--- a/src/Routes/Nav/nav.styles.scss
+++ b/src/Routes/Nav/nav.styles.scss
@@ -15,7 +15,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
     width: 100%;
 
 }
@@ -126,3 +125,36 @@
      }
 }
 
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(4px);
+    z-index: 0;
+}
+
+@media screen and (max-width: 1200px) {
+    .nav-bar-container {
+        padding: 1rem 2rem;
+    }
+
+    .nav-option, #shop, #account {
+        display: none;
+    }
+
+    .side-nav-options {
+        button {
+            background-color: rgba(0,0,0,0.3);
+            border-radius: 5px;
+        }
+    }
+}
+
+@media screen and (max-width: 625px) {
+    .nav-bar-container {
+        padding: 1rem;
+    }
+}
