adding scroll to menu

--- a/src/Components/Text/text.styles.scss
+++ b/src/Components/Text/text.styles.scss
@@ -97,6 +97,7 @@
 
     #button-two {
         background-color: rgba(244, 244, 244, 0.65);
+        color: rgb(23, 26, 32);
     }
 }
 
@@ -120,19 +121,11 @@
 @media screen and (max-width: 625px) {
     .text-title {
         width: 90%;
-
-        span {
-            font-size: 52px;
-        }
-
-        p {
-            font-size: 20px;
-        }
     }
 
     .text-buttons-container{
         position: fixed;
-        top: 80%;
+        bottom: 25%;
         left: 50%;
         transform: translate(-50%, 0%);
         width: 100vw;
@@ -145,8 +138,6 @@
         
         button {
             width: 100%;
-            font-size: 20px;
-            padding: 1rem 0;
         }
     }
     
@@ -156,8 +147,6 @@
 
         button {
             width: 100%;
-            font-size: 20px;
-            padding: 1rem 0;
         }
     }
 }
