--- a/src/Routes/Home/home.styles.scss
+++ b/src/Routes/Home/home.styles.scss
@@ -112,6 +112,7 @@
 
     .homepage-modelY-container {
         background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/h_2100,w_800,c_fit,f_auto,q_auto:best/Homepage-ModelY-LHD-Mobile');
+        background-position: 50% 30%;
     }
 
     .homepage-modelS-container {
