--- a/src/Components/Menu/menu.styles.scss
+++ b/src/Components/Menu/menu.styles.scss
@@ -60,6 +60,29 @@
     
 }
 
+.menu-options-container {
+    height: 84vh;
+    padding-bottom: 10rem;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.menu-options-container::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(4px);
+    z-index: 0;
+}
+
 @media screen and (max-width: 625px) {    
     .menu-options {
         gap: 20px;
