--- a/src/Routes/Nav/nav.styles.scss
+++ b/src/Routes/Nav/nav.styles.scss
@@ -131,6 +131,7 @@
 @media screen and (max-width: 1200px) {
     .nav-bar-container {
         padding: 1rem 2rem;
+        max-width: 100vw;
     }
 
     .nav-option, #shop, #account {
